# anx_interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  package.xml  pyproject.toml
anx_interface/: CMakeLists.txt  README.md  __init__.py  anx_interface.py  assets_manager.py  package.xml  proto  tflite_interface.py
anx_interface/assets/: device_camera.py  device_gnss.py  device_imu.py
anx_interface/include/anx_interface/: anx_interface.h  asset_interface.h  asset_manager.h  camera_manager.h  gnss_manager.h  imu_manager.h  phone_manager.h  speaker_manager.h  usb_serial_manager.h
anx_interface/launch/: anx_interface.launch
anx_interface/param/: anx_interface.yaml
anx_interface/src/: anx_interface.cpp  anx_interface_node.cpp  asset_manager.cpp  base64.cpp  camera_manager.cpp  gnss_manager.cpp  imu_manager.cpp  phone_manager.cpp  speaker_manager.cpp  usb_serial_manager.cpp
anx_interface/test/advanced_parameter_server/: advanced_parameter_server.launch  imu.yaml
anx_interface/tests/: test_device_camera.py  test_device_gnss.py  test_device_imu.py  test_device_logs.py  test_device_state.py
anx_interface/tools/: anx.py
anx_interface/utils/: fifo.py
anx_interface_msgs/: CMakeLists.txt  package.xml
anx_interface_msgs/msg/: Battery.msg  Cpu.msg  CpuFreq.msg  Gpu.msg  Memory.msg  PhoneState.msg  Ram.msg  Storage.msg  Thermal.msg
anx_interface_msgs/srv/: SendSignal.srv
anx_interface_ros2/: CMakeLists.txt  package.xml
anx_interface_ros2/anx_interface_ros2/: camera_driver.py  gnss_driver.py  imu_driver.py
anx_logging/: device_logs_logger.py  perf_logger.py
anx_mock/: anx_mock.py
anx_mock/assets/: device_camera.py  device_gnss.py  device_imu.py
anx_proto/cpp/: assets.pb.cc  assets.pb.h  common.pb.cc  common.pb.h  device.pb.cc  device.pb.h  model.pb.cc  model.pb.h
anx_proto/python/: assets_pb2.py  common_pb2.py  device_pb2.py  model_pb2.py
api_docs/anx/: README.md  assets.proto  common.proto  device.proto  model.proto
docs/: design.md
hermes_interface/: CMakeLists.txt  README.md  package.xml
hermes_interface/include/hermes_interface/: asset_manager.h  asset_manager_interface.h  camera_manager.h  gnss_manager.h  imu_manager.h  phone_manager.h  speaker_manager.h  usb_serial_manager.h
hermes_interface/param/: hermes_interface.yaml
hermes_interface/src/: asset_manager.cpp  base64.cpp  camera_manager.cpp  gnss_manager.cpp  hermes_interface.cpp  hermes_interface_node.cpp  imu_manager.cpp  phone_manager.cpp  speaker_manager.cpp  usb_serial_manager.cpp
hermes_interface/test/advanced_parameter_server/: advanced_parameter_server.cpp
hermes_interface_msgs/: CMakeLists.txt  package.xml
hermes_interface_msgs/msg/: PhoneState.msg  Signal.msg
hermes_interface_msgs/srv/: SendSignal.srv
include/hermes_interface/: asset_manager.h  asset_manager_interface.h  camera_manager.h  hermes_interface.h  imu_manager.h  usb_serial_manager.h
launch/: hermes_interface.launch
logging/: perf_logger.py
param/: hermes_interface.yaml
src/: asset_manager.cpp  base64.cpp  camera_manager.cpp  hermes_interface_node.cpp  imu_manager.cpp  usb_serial_manager.cpp
test/advanced_parameter_server/: advanced_parameter_server.launch  imu.yaml
test/json_parsing/: json_parsing.cpp
