<?xml version="1.0"?>
<package format="2">

  <name>hermes_interface</name>
  <version>0.1.0</version>

  <description>
    Implements hermes_api
  </description>

  <maintainer email="aditya@flomobility.com">Aditya Shriwastava</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>roscpp</build_export_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_export_depend>rospy</build_export_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
