[tool.poetry]
name = "anx-interface"
version = "0.5.0"
description = "Implements anx_api"
authors = ["Aditya Shriwastava <aditya@flomobility.com>"]
readme = "README.md"
packages = [{include = "anx_interface"}]

[tool.poetry.dependencies]
python = "^3.8"
progress = "~1.6"
pyzmq = "~22.3.0"
protobuf = "~3.19.0"
opencv-python = "^4.7.0.68"
numpy = "^1.24.2"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
