<?xml version="1.0"?>
<package format="2">

  <name>anx_interface</name>
  <version>0.1.0</version>

  <description>
    Implements anx_api
  </description>

  <maintainer email="aditya@flomobility.com">Aditya Shriwastava</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>roscpp</build_export_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_export_depend>rospy</build_export_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>camera_info_manager</build_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>image_transport_plugins</build_depend>
  <exec_depend>image_transport_plugins</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>anx_interface_msgs</build_depend>
  <exec_depend>anx_interface_msgs</exec_depend>

  <build_depend>nmea_msgs</build_depend>
  <exec_depend>nmea_msgs</exec_depend>
</package>
