<?xml version="1.0"?>
<package format="2">

  <name>anx_interface_msgs</name>
  <version>0.0.0</version>

  <description>
    anx_interface msgs
  </description>

  <maintainer email="aditya@flomobility.com">Aditya Shriwastava</maintainer>
  <maintainer email="clay@flomobility.com">Clay</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
