<?xml version="1.0"?>
<package format="2">

  <name>hermes_interface_msgs</name>
  <version>0.0.0</version>

  <description>
    hermes_interface msgs
  </description>

  <maintainer email="aditya@flomobility.com">Aditya Shriwastava</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
